<resources>
    <string name="app_name">NearMe</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Don\'t you have an account? Create a new one!</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username_hint">Username</string>
    <string name="firstname_hint">First name</string>
    <string name="lastname_hint">Last name</string>
    <string name="sign_up_button_description">Click to create the account</string>
    <string name="username_description">Insert a username</string>
    <string name="firstname_description">Insert your first name</string>
    <string name="lastname_description">Insert your last name</string>
    <string name="email_description">Insert your personal email</string>
    <string name="password_description">Type your personal password</string>
    <string name="sign_in_button_description">Click to sign in</string>
    <string name="category_title_description">The title of category</string>
    <string name="category_image_description">The image to represent the category</string>
    <string name="search_button_description">Press it to search for places</string>
    <string name="place_photo_description">Photo of the place</string>
    <string name="no_places">There are no places with this type near to you</string>
    <string name="place_icon_description">Place\'s icon</string>
    <string name="fav_widget_image">Place\'s thumbnail</string>

    <string name="logout">Logout</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="title_place_list">Places</string>
    <string name="title_place_detail">Place Detail</string>
    <string name="title_review_textview">Review stats</string>
    <string name="title_placephoto_textview">Place\'s photos</string>
    <string name="title_generalinfo_textview">General Information</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="appwidget_title">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="menu_done">Done</string>
    <string name="widget_configure_prompt_message">Select places to keep them in your widget:</string>
    <string name="offlineMessage">Connect to internet and try again.</string>
    <string name="tryAgainBtn">Try Again</string>
</resources>
